bug 119786 - don't consider a caption and row group frame to be siblings (caption and row group content are siblings). sr=kin, r=bernd.